--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,17 @@ BOX LAYOUT
 body {
 	background-image: url('../img/TiledBackground.jpg');
 	background-repeat: repeat;
+	-webkit-animation-delay: 0.1s;
+  -webkit-animation-name: fontfix;
+  -webkit-animation-duration: 0.1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
 }
 
+@-webkit-keyframes fontfix {
+    from { opacity: 1; }
+    to   { opacity: 1; }
+}
 
 #site-wrapper {
 	max-width: 800px;
